--- a/html/login.html
+++ b/html/login.html
@@ -222,6 +222,16 @@ p {
 .dzone{
     font-size:  45px;
     color:white;
+    position: relative;
+    right:25%;
+    top:15%;
+}
+.driverlogo{
+  width:140px;
+  height:90px;
+  position: relative;
+  right:30%;
+
 }
 
     </style>
@@ -231,8 +241,16 @@ p {
 <body class="align">
     
     <div class="grid">
-        <img src="images/driver.png"/>
+        <table>
+          <tr>
+            <td class>
+        <img class="driverlogo" src="../images/driver_test.png"/>
+      </td>
+      <td>
         <p class="dzone">DriverZone</p>
+      </td>
+      </tr>
+      </table>
       <form action="https://httpbin.org/post" method="POST" class="form login">
   
         <div class="form__field">
