--- a/html/forum.html
+++ b/html/forum.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap CSS -->
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" 
@@ -14,7 +14,10 @@
 
     <title>Discussion Forum</title>
 </head>
+
 <body>
     <h1>This is a test for css style</h1>
+    <p>This is a test for live server</p>
+    <p>Yay it's working</p>
 </body>
 </html>
