--- a/html/forum.html
+++ b/html/forum.html
@@ -16,8 +16,17 @@
 </head>
 
 <body>
-    <h1>This is a test for css style</h1>
-    <p>This is a test for live server</p>
-    <p>Yay it's working</p>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col">
+                <div class="jumbotron bg-light border border-secondary">
+                    <div class="ps-4 pt-4 pb-5">
+                        <h1 class="display-4">Welcome to the Discussion Forum</h1>
+                        <p class="lead" >This is a place for everyone to exchange questions and ideas</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
