--- a/html/forum.html
+++ b/html/forum.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Discussion Forum</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +13,19 @@
 
     <link rel="stylesheet" href="../css/style.css">
 
-    <title>Discussion Forum</title>
+    <style>
+        .top_buffer
+        {
+            margin-top: 50px;
+        }
+
+        .button_size
+        {
+            width:100%;
+            height:100%
+        }
+    </style>
+
 </head>
 
 <body>
@@ -27,6 +40,37 @@
                 </div>
             </div>
         </div>
+
+        <div class="row justify-content-center top_buffer border border-secondary bg-light mx-0">
+            <div class="col">
+                <H3>Theory Help</H3>
+                <p>A place for those with querries on BTT and FTT. Seek help here if you struggle to understand the theories about driving.</p>
+            </div>
+            <div class="col-1 px-0">
+                <button type="button" class="btn btn-primary text-right button_size">Enter</button>
+            </div>
+        </div>
+
+        <div class="row justify-content-center top_buffer border border-secondary bg-light mx-0">
+            <div class="col">
+                <H3>Practical Driving</H3>
+                <p>A place for those having practical lessons. Engage in different discussion with various other learner drivers to get tips to improve your driving skills.</p>
+            </div>
+            <div class="col-1 px-0">
+                <button type="button" class="btn btn-primary text-right button_size">Enter</button>
+            </div>
+        </div>
+
+        <div class="row justify-content-center top_buffer border border-secondary bg-light mx-0">
+            <div class="col">
+                <H3>Lounge</H3>
+                <p>A place for everyone to hangout and relax. Discuss various topic or rant about your driving experience to relief your stress from driving.</p>
+            </div>
+            <div class="col-1 px-0">
+                <button type="button" class="btn btn-primary text-center button_size">Enter</button>
+            </div>
+        </div>
     </div>
+
 </body>
 </html>
