--- a/html/forum.html
+++ b/html/forum.html
@@ -13,6 +13,8 @@
 
     <link rel="stylesheet" href="../css/style.css">
 
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
     <style>
         .top_buffer
         {
@@ -29,6 +31,14 @@
 </head>
 
 <body>
+    <div id="nav-placeholder"></div>
+    <script>
+        $(function()
+        {
+            $("#nav-placeholder").load("navbar.html");
+        });
+    </script>
+
     <div class="container">
         <div class="row justify-content-center">
             <div class="col">
