--- a/html/forum.html
+++ b/html/forum.html
@@ -2,26 +2,21 @@
 <html lang="en">
 <head>
     <title>Discussion Forum</title>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" 
     crossorigin="anonymous">
 
     <link rel="stylesheet" href="../css/style.css">
-
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
     <style>
-        .top_buffer
+        .top_margin_50px
         {
             margin-top: 50px;
         }
 
-        .button_size
+        .button_size_enter
         {
             width:100%;
             height:100%
@@ -51,33 +46,33 @@
             </div>
         </div>
 
-        <div class="row justify-content-center top_buffer border border-secondary bg-light mx-0">
+        <div class="row justify-content-center top_margin_50px border border-secondary bg-light mx-0">
             <div class="col">
                 <H3>Theory Help</H3>
                 <p>A place for those with querries on BTT and FTT. Seek help here if you struggle to understand the theories about driving.</p>
             </div>
             <div class="col-1 px-0">
-                <button type="button" class="btn btn-primary text-right button_size">Enter</button>
+                <button type="button" class="btn btn-primary text-right button_size_enter">Enter</button>
             </div>
         </div>
 
-        <div class="row justify-content-center top_buffer border border-secondary bg-light mx-0">
+        <div class="row justify-content-center top_margin_50px border border-secondary bg-light mx-0">
             <div class="col">
                 <H3>Practical Driving</H3>
                 <p>A place for those having practical lessons. Engage in different discussion with various other learner drivers to get tips to improve your driving skills.</p>
             </div>
             <div class="col-1 px-0">
-                <button type="button" class="btn btn-primary text-right button_size">Enter</button>
+                <button type="button" class="btn btn-primary text-right button_size_enter">Enter</button>
             </div>
         </div>
 
-        <div class="row justify-content-center top_buffer border border-secondary bg-light mx-0">
+        <div class="row justify-content-center top_margin_50px border border-secondary bg-light mx-0">
             <div class="col">
                 <H3>Lounge</H3>
                 <p>A place for everyone to hangout and relax. Discuss various topic or rant about your driving experience to relief your stress from driving.</p>
             </div>
             <div class="col-1 px-0">
-                <button type="button" class="btn btn-primary text-center button_size">Enter</button>
+                <button type="button" class="btn btn-primary text-center button_size_enter">Enter</button>
             </div>
         </div>
     </div>
