--- a/html/theory.html
+++ b/html/theory.html
@@ -20,5 +20,18 @@
                 $("#nav-placeholder").load("navbar.html");
             });
         </script>
+
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col">
+                <div class="jumbotron bg-light border border-secondary">
+                    <div class="ps-4 pt-4 pb-5">
+                        <h1 class="display-4">Welcome to the Theory Discussion Forum</h1>
+                        <p class="lead" >This is a place for discussion of BTT and FTT</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
