--- a/html/calendar.html
+++ b/html/calendar.html
@@ -18,7 +18,7 @@
 <body>
   <div id="nav-placeholder"></div>
   <div class="jumbotron jumbotron-fluid ">
-    <div class="container ">
+    <div class="container">
       <div class="row">
         <div class="col-6" id="left-stuff">
           <h1 class="display-4 " style="font-weight:bold;font-size:30px;">We focus on your Story</h1>
@@ -35,13 +35,19 @@
   </div>
 
   <div class="container">
+    <div class='row'>
+      <div class='col-6'>
+        <div id="calendar">
+          <h3 style="font-weight: bold; font-size:23px; margin-bottom:20px ;">Select Time</h3>
+          <div id="calendar_header"><i class="icon-chevron-left"></i>          <h1></h1><i class="icon-chevron-right"></i>         </div>
+          <div id="calendar_weekdays"></div>
+          <div id="calendar_content"></div>
+        </div>
+      </div>
+    </div>
     
   </div>
-  <div id="calendar">
-    <div id="calendar_header"><i class="icon-chevron-left"></i>          <h1></h1><i class="icon-chevron-right"></i>         </div>
-    <div id="calendar_weekdays"></div>
-    <div id="calendar_content"></div>
-  </div>
+  
 </body>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
