--- a/html/driverprofile.html
+++ b/html/driverprofile.html
@@ -4,6 +4,9 @@
   <title>Login</title>
 
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  
+
+
 
     <style>
 
@@ -43,7 +46,24 @@ Convert HEX to RGBA - http://hex2rgba.devoth.com/
 </head>
 
 <body>
+  <script type="module" src="../js/driverprofile.js"></script>
     <div id="nav-placeholder"></div>
+ 
+    <table class="table">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">Name</th>
+          <th scope="col">Language</th>
+          <th scope="col">Price</th>
+          <th scope="col">Image</th>
+        </tr>
+      </thead>
+     <tbody id="body">
+
+
+
+     </tbody>
+    </table>
    
 
 
@@ -64,3 +84,5 @@ Convert HEX to RGBA - http://hex2rgba.devoth.com/
         })
   </script>
   </body>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
