--- a/Drive/HTML5 Template/course-list.html
+++ b/Drive/HTML5 Template/course-list.html
@@ -33,7 +33,7 @@
 	<link rel="stylesheet" type="text/css" href="css/color.css">
 <!--===============================================================================================-->
 </head>
-<script type="module" src="./js/driverprofile.js"></script>
+<script type="module" src="./js/driverdetails.js"></script>
 
 <body class="animsition restyle-index">
 	
