--- a/Drive/HTML5 Template/course-list.html
+++ b/Drive/HTML5 Template/course-list.html
@@ -63,12 +63,8 @@
 							</li>
 
 							<li>
-								<a href="course-list.html">Courses</a>
-								<ul class="sub-menu">
-									<li><a href="course-list.html">Course List</a></li>
-									<li><a href="course-grid.html">Course Grid</a></li>
-									<li><a href="course-detail.html">Course Detail</a></li>
-								</ul>
+								<a href="course-list.html">Instructors</a>
+						
 							</li>
 
 							<li>
