--- a/html/theory.html
+++ b/html/theory.html
@@ -19,7 +19,7 @@
             <div class="row justify-content-center">
                 <div class="col">
                     <div class="jumbotron bg-light border border-secondary">
-                        <div class="ps-4 pt-4 pb-4">
+                        <div>
                             <h1 class="display-4">Welcome to the Theory Discussion Forum</h1>
                             <p class="lead" >This is a place for discussion of BTT and FTT</p>
                         </div>
@@ -27,8 +27,8 @@
                 </div>
             </div>
 
-        <div class="row justify-content-center">
-            <div class="col-12 pt-5">
+        <div class="row justify-content-center pt-1">
+            <div class="col-12">
                 <div class="input-group">
                     <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
                     <button type="button" class="btn btn-outline-primary" id="search_button" onclick="search_for_post()">Search</button>
