--- a/html/forum.html
+++ b/html/forum.html
@@ -12,7 +12,7 @@
     <style>
         .top_margin_50px
         {
-            margin-top: 50px;
+            margin-top: 10px;
         }
 
         .button_size_enter
@@ -31,7 +31,7 @@
         <div class="row justify-content-center">
             <div class="col">
                 <div class="jumbotron bg-light">
-                    <div class="ps-4 pt-4 pb-5">
+                    <div class="ps-4 pt-1 pb-1">
                         <h1 class="display-4">Welcome to the Discussion Forum</h1>
                         <p class="lead" >This is a place for everyone to exchange questions and ideas</p>
                     </div>
@@ -39,8 +39,8 @@
             </div>
         </div>
 
-        <div class="row justify-content-center top_margin_50px bg-light mx-0">
-            <div class="col">
+        <div class="row justify-content-center my-3 bg-light mx-0">
+            <div class="col bg-info">
                 <div class="my-4 mx-3">
                     <H3>Theory Help</H3>
                     <p>A place for those with querries on BTT and FTT. Seek help here if you struggle to understand the theories about driving.</p>
@@ -51,8 +51,8 @@
             </div>
         </div>
 
-        <div class="row justify-content-center top_margin_50px bg-light mx-0">
-            <div class="col">
+        <div class="row justify-content-center my-3 bg-light mx-0">
+            <div class="col bg-success">
                 <div class="my-4 mx-3">
                     <H3>Practical Driving</H3>
                     <p>A place for those having practical lessons. Engage in different discussion with various other learner drivers to get tips to improve your driving skills.</p>
@@ -63,8 +63,8 @@
             </div>
         </div>
 
-        <div class="row justify-content-center top_margin_50px bg-light mx-0" style="margin-bottom: 100px;">
-            <div class="col">
+        <div class="row justify-content-center my-3 bg-light mx-0" style="margin-bottom: 100px;">
+            <div class="col bg-warning">
                 <div class="my-4 mx-3">
                     <H3>Lounge</H3>
                     <p>A place for everyone to hangout and relax. Discuss various topic or rant about your driving experience to relief your stress from driving.</p>
