--- a/Drive/HTML5 Template/index.html
+++ b/Drive/HTML5 Template/index.html
@@ -35,8 +35,10 @@
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/color.css">
+	
 <!--===============================================================================================-->
 </head>
+<script src="/navbar.html"></script>
 <body class="animsition restyle-index">
 	
 	<header>
