--- a/html/index.html
+++ b/html/index.html
@@ -10,31 +10,31 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!--===============================================================================================-->
-	<link rel="icon" type="image/png" href="images/icons/favicon.png"/>
+	<link rel="icon" type="image/png" href="../images/icons/favicon.png"/>
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/bootstrap/css/bootstrap.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="../fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="fonts/elegant-font/html-css/style.css">
+	<link rel="stylesheet" type="text/css" href="../fonts/elegant-font/html-css/style.css">
 <!--===============================================================================================-->	
-	<link rel="stylesheet" type="text/css" href="vendor/revolution/css/layers.css">
-	<link rel="stylesheet" type="text/css" href="vendor/revolution/css/navigation.css">
-	<link rel="stylesheet" type="text/css" href="vendor/revolution/css/settings.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/revolution/css/layers.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/revolution/css/navigation.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/revolution/css/settings.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/css-hamburgers/hamburgers.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/slick/slick.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/slick/slick.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/animate/animate.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/lightbox2/css/lightbox.min.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/lightbox2/css/lightbox.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/animsition/dist/css/animsition.min.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/animsition/dist/css/animsition.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="css/util.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="stylesheet" type="text/css" href="css/color.css">
+	<link rel="stylesheet" type="text/css" href="../css/util.css">
+	<link rel="stylesheet" type="text/css" href="../css/main.css">
+	<link rel="stylesheet" type="text/css" href="../css/color.css">
 <!--===============================================================================================-->
 </head>
 <body class="animsition restyle-index">
@@ -48,7 +48,7 @@
 					
 					<!-- Logo desktop -->		
 					<a href="index.html" class="logo">
-						<img src="images/icons/logo.png" alt="IMG-LOGO">
+						<img src="../images/icons/logo.png" alt="IMG-LOGO">
 					</a>
 
 					<!-- Menu desktop -->
@@ -115,7 +115,7 @@
 		<div class="wrap-header-mobile">
 			<!-- Logo moblie -->		
 			<a href="index.html" class="logo-mobile">
-				<img src="images/icons/logo.png" alt="IMG-LOGO">
+				<img src="../images/icons/logo.png" alt="IMG-LOGO">
 			</a>
 			
 
@@ -238,7 +238,7 @@
 				<ul>
 					<!-- Slide 1 -->
 					<li data-transition="fade">
-						<img src="images/slide-01.jpg" alt="IMG-SLIDE" class="rev-slidebg">
+						<img src="../images/slide-01.jpg" alt="IMG-SLIDE" class="rev-slidebg">
 
 						<h2 class="tp-caption tp-resizeme txt1 txt-center p-l-15 p-r-15" 
 						data-frames='[{"delay":500,"speed":1500,"frame":"0","from":"x:left;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
@@ -293,7 +293,7 @@
 
 					<!-- Slide 2 -->
 					<li data-transition="fade">
-						<img src="images/slide-02.jpg" alt="IMG-SLIDE" class="rev-slidebg">
+						<img src="../images/slide-02.jpg" alt="IMG-SLIDE" class="rev-slidebg">
 
 						<h2 class="tp-caption tp-resizeme txt1 txt-center p-l-15 p-r-15" 
 						data-frames='[{"delay":500,"speed":1500,"frame":"0","from":"y:top;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
@@ -347,7 +347,7 @@
 
 					<!-- Slide 3 -->
 					<li data-transition="fade">
-						<img src="images/slide-03.jpg" alt="IMG-SLIDE" class="rev-slidebg">
+						<img src="../images/slide-03.jpg" alt="IMG-SLIDE" class="rev-slidebg">
 						
 						<h2 class="tp-caption tp-resizeme txt1 txt-center p-l-15 p-r-15" 
 						data-frames='[{"delay":500,"speed":1500,"frame":"0","from":"x:-500px;skX:85px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
@@ -413,7 +413,7 @@
 					<!-- Block 1 -->
 					<div class="block-1">
 						<div class="wrap-pic-b1 wrap-pic-w">
-							<img src="images/featured-01.jpg" alt="IMG-FEATURE">
+							<img src="../images/featured-01.jpg" alt="IMG-FEATURE">
 						</div>
 
 						<div class="wrap-text-b1 bg-main op-09 trans-05 ">
@@ -442,7 +442,7 @@
 					<!-- Block 1 -->
 					<div class="block-1">
 						<div class="wrap-pic-b1 wrap-pic-w">
-							<img src="images/featured-02.jpg" alt="IMG-FEATURE">
+							<img src="../images/featured-02.jpg" alt="IMG-FEATURE">
 						</div>
 
 						<div class="wrap-text-b1 bg-main op-09 trans-05">
@@ -471,7 +471,7 @@
 					<!-- Block 1 -->
 					<div class="block-1">
 						<div class="wrap-pic-b1 wrap-pic-w">
-							<img src="images/featured-03.jpg" alt="IMG-FEATURE">
+							<img src="../images/featured-03.jpg" alt="IMG-FEATURE">
 						</div>
 
 						<div class="wrap-text-b1 bg-main op-09 trans-05">
@@ -619,7 +619,7 @@
 
 						<div class="wrap-person m-lr-auto flex-c-m animated">
 							<div class="wrap-pic-person">
-								<img src="images/testimonial-img-01.jpg" alt="IMG-PERSON">
+								<img src="../images/testimonial-img-01.jpg" alt="IMG-PERSON">
 							</div>
 
 							<div class="wrap-info-person p-l-20">
@@ -636,7 +636,7 @@
 
 						<div class="wrap-person m-lr-auto flex-c-m animated">
 							<div class="wrap-pic-person">
-								<img src="images/testimonial-img-02.jpg" alt="IMG-PERSON">
+								<img src="../images/testimonial-img-02.jpg" alt="IMG-PERSON">
 							</div>
 
 							<div class="wrap-info-person p-l-20">
@@ -653,7 +653,7 @@
 
 						<div class="wrap-person m-lr-auto flex-c-m animated">
 							<div class="wrap-pic-person">
-								<img src="images/testimonial-img-03.jpg" alt="IMG-PERSON">
+								<img src="../images/testimonial-img-03.jpg" alt="IMG-PERSON">
 							</div>
 
 							<div class="wrap-info-person p-l-20">
@@ -670,7 +670,7 @@
 
 						<div class="wrap-person m-lr-auto flex-c-m animated">
 							<div class="wrap-pic-person">
-								<img src="images/testimonial-img-04.jpg" alt="IMG-PERSON">
+								<img src="../images/testimonial-img-04.jpg" alt="IMG-PERSON">
 							</div>
 
 							<div class="wrap-info-person p-l-20">
@@ -707,7 +707,7 @@
 					<!-- Block 3 -->
 					<div class="block-3 bo2">
 						<div class="wrap-pic-b3 wrap-pic-w hov5 bo2-b">
-							<a href="course-detail.html"><img src="images/course-01.jpg" alt="IMG-COURSE"></a>
+							<a href="course-detail.html"><img src="../images/course-01.jpg" alt="IMG-COURSE"></a>
 						</div>
 
 						<div class="wrap-text-b3 p-l-20 p-r-20 p-t-16 p-b-26">
@@ -753,7 +753,7 @@
 					<!-- Block 3 -->
 					<div class="block-3 bo2">
 						<div class="wrap-pic-b3 wrap-pic-w hov5 bo2-b">
-							<a href="course-detail.html"><img src="images/course-02.jpg" alt="IMG-COURSE"></a>
+							<a href="course-detail.html"><img src="../images/course-02.jpg" alt="IMG-COURSE"></a>
 						</div>
 
 						<div class="wrap-text-b3 p-l-20 p-r-20 p-t-16 p-b-26">
@@ -799,7 +799,7 @@
 					<!-- Block 3 -->
 					<div class="block-3 bo2">
 						<div class="wrap-pic-b3 wrap-pic-w hov5 bo2-b">
-							<a href="course-detail.html"><img src="images/course-03.jpg" alt="IMG-COURSE"></a>
+							<a href="course-detail.html"><img src="../images/course-03.jpg" alt="IMG-COURSE"></a>
 						</div>
 
 						<div class="wrap-text-b3 p-l-20 p-r-20 p-t-16 p-b-26">
@@ -912,7 +912,7 @@
 			<div class="row">
 				<div class=" col-sm-12 col-lg-3 p-t-30">
 					<div class="w-full wrap-pic-max-w">
-						<a href="index.html"><img src="images/icons/logo-02.png" alt="LOGO"></a>
+						<a href="index.html"><img src="../images/icons/logo-02.png" alt="LOGO"></a>
 					</div>
 
 					<p class="s-txt9 p-t-30">
@@ -987,24 +987,24 @@
 							<img src="images/gallery-footer-01.jpg" alt="GALLERY">
 						</a>
 
-						<a class="item-gallery-footer wrap-pic-w" href="images/gallery-footer-02.jpg" data-lightbox="gallery-footer">
-							<img src="images/gallery-footer-02.jpg" alt="GALLERY">
+						<a class="item-gallery-footer wrap-pic-w" href="../images/gallery-footer-02.jpg" data-lightbox="gallery-footer">
+							<img src="../images/gallery-footer-02.jpg" alt="GALLERY">
 						</a>
 
-						<a class="item-gallery-footer wrap-pic-w" href="images/gallery-footer-03.jpg" data-lightbox="gallery-footer">
-							<img src="images/gallery-footer-03.jpg" alt="GALLERY">
+						<a class="item-gallery-footer wrap-pic-w" href="../images/gallery-footer-03.jpg" data-lightbox="gallery-footer">
+							<img src="../images/gallery-footer-03.jpg" alt="GALLERY">
 						</a>
 
-						<a class="item-gallery-footer wrap-pic-w" href="images/gallery-footer-04.jpg" data-lightbox="gallery-footer">
-							<img src="images/gallery-footer-04.jpg" alt="GALLERY">
+						<a class="item-gallery-footer wrap-pic-w" href="../images/gallery-footer-04.jpg" data-lightbox="gallery-footer">
+							<img src="../images/gallery-footer-04.jpg" alt="GALLERY">
 						</a>
 
-						<a class="item-gallery-footer wrap-pic-w" href="images/gallery-footer-05.jpg" data-lightbox="gallery-footer">
-							<img src="images/gallery-footer-05.jpg" alt="GALLERY">
+						<a class="item-gallery-footer wrap-pic-w" href="../images/gallery-footer-05.jpg" data-lightbox="gallery-footer">
+							<img src="../images/gallery-footer-05.jpg" alt="GALLERY">
 						</a>
 
-						<a class="item-gallery-footer wrap-pic-w" href="images/gallery-footer-06.jpg" data-lightbox="gallery-footer">
-							<img src="images/gallery-footer-06.jpg" alt="GALLERY">
+						<a class="item-gallery-footer wrap-pic-w" href="../images/gallery-footer-06.jpg" data-lightbox="gallery-footer">
+							<img src="../images/gallery-footer-06.jpg" alt="GALLERY">
 						</a>
 					</div>
 				</div>
@@ -1030,42 +1030,42 @@
 
 
 <!--===============================================================================================-->	
-	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+	<script src="../vendor/jquery/jquery-3.2.1.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/wow/wow.min.js"></script>
+	<script src="../vendor/wow/wow.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/animsition/dist/js/animsition.min.js"></script>
+	<script src="../vendor/animsition/dist/js/animsition.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/slick/slick.min.js"></script>
-	<script src="js/slick-custom.js"></script>
+	<script src="../vendor/slick/slick.min.js"></script>
+	<script src="../js/slick-custom.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/bootstrap/js/popper.min.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+	<script src="../vendor/bootstrap/js/popper.min.js"></script>
+	<script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
 <!--===============================================================================================-->	
-	<script src="vendor/revolution/js/jquery.themepunch.tools.min.js"></script>
-	<script src="vendor/revolution/js/jquery.themepunch.revolution.min.js"></script>
-	<script src="vendor/revolution/js/extensions/revolution.extension.video.min.js"></script>
-	<script src="vendor/revolution/js/extensions/revolution.extension.carousel.min.js"></script>
-	<script src="vendor/revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
-	<script src="vendor/revolution/js/extensions/revolution.extension.actions.min.js"></script>
-	<script src="vendor/revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
-	<script src="vendor/revolution/js/extensions/revolution.extension.kenburn.min.js"></script>
-	<script src="vendor/revolution/js/extensions/revolution.extension.navigation.min.js"></script>
-	<script src="vendor/revolution/js/extensions/revolution.extension.migration.min.js"></script>
-	<script src="vendor/revolution/js/extensions/revolution.extension.parallax.min.js"></script>
-	<script src="js/slide-custom.js"></script>
+	<script src="../vendor/revolution/js/jquery.themepunch.tools.min.js"></script>
+	<script src="../vendor/revolution/js/jquery.themepunch.revolution.min.js"></script>
+	<script src="../vendor/revolution/js/extensions/revolution.extension.video.min.js"></script>
+	<script src="../vendor/revolution/js/extensions/revolution.extension.carousel.min.js"></script>
+	<script src="../vendor/revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
+	<script src="../vendor/revolution/js/extensions/revolution.extension.actions.min.js"></script>
+	<script src="../vendor/revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
+	<script src="../vendor/revolution/js/extensions/revolution.extension.kenburn.min.js"></script>
+	<script src="../vendor/revolution/js/extensions/revolution.extension.navigation.min.js"></script>
+	<script src="../vendor/revolution/js/extensions/revolution.extension.migration.min.js"></script>
+	<script src="../vendor/revolution/js/extensions/revolution.extension.parallax.min.js"></script>
+	<script src="../js/slide-custom.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/lightbox2/js/lightbox.min.js"></script>
+	<script src="../vendor/lightbox2/js/lightbox.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/parallax100/parallax100.js"></script>
+	<script src="../vendor/parallax100/parallax100.js"></script>
 	<script>
         $('.parallax100').parallax100();
 	</script>
 <!--===============================================================================================-->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKFWBqlKAGCeS1rMVoaNlwyayu0e0YRes"></script>
-	<script src="js/map-custom.js"></script>
+	<script src="../js/map-custom.js"></script>
 <!--===============================================================================================-->
-	<script src="js/main.js"></script>
+	<script src="../js/main.js"></script>
 
 </body>
 </html>
